# wifi-tracker

./: .gitignore  BRAIN.md  README.md
bloom-landing/: index.html  package-lock.json  package.json  tsconfig.json
ruview/: CHANGELOG.md  CLAUDE.md  README.md
ruview/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
ruview/python/bench/: test_bench_bfld_and_ws.py  test_bench_vitals.py
ruview/python/ruview-meta/: README.md  pyproject.toml
ruview/python/ruview-meta/src/ruview/: __init__.py
ruview/python/src/: lib.rs
ruview/python/src/bindings/: bfld.rs  keypoint.rs  pose.rs  privacy_gate.rs  vitals.rs
ruview/python/tests/: test_bfld.py  test_client_ha.py  test_client_mqtt.py  test_client_primitives.py  test_client_ws.py  test_keypoint.py  test_pose.py  test_security.py  test_smoke.py  test_vitals.py
ruview/python/tombstone/: README.md  pyproject.toml
ruview/python/tombstone/src/wifi_densepose/: __init__.py
ruview/python/tombstone/tests/: test_tombstone.py
ruview/python/wifi_densepose/: __init__.py
ruview/python/wifi_densepose/client/: __init__.py  ha.py  mqtt.py  primitives.py  ws.py
ruview/v2/crates/cog-ha-matter/: Cargo.toml
ruview/v2/crates/cog-ha-matter/blueprints/bfld/: README.md  identity-risk-anomaly.yaml  motion-hvac.yaml  presence-lighting.yaml
ruview/v2/crates/cog-ha-matter/cog/: Makefile  README.md  RELEASE-CHECKLIST.md  app-registry-entry.json  manifest.template.json
ruview/v2/crates/cog-ha-matter/src/: lib.rs  main.rs  manifest.rs  mdns.rs  runtime.rs
ruview/v2/crates/cog-person-count/: Cargo.toml
ruview/v2/crates/cog-person-count/benches/: infer_bench.rs
ruview/v2/crates/cog-person-count/cog/: README.md  config.schema.json  manifest.template.json
ruview/v2/crates/cog-person-count/cog/artifacts/: count_train_results.json  count_v1.onnx  count_v1.safetensors  count_v1.temperature  saliency.json
ruview/v2/crates/cog-person-count/cog/artifacts/manifests/arm/: manifest.json
ruview/v2/crates/cog-person-count/cog/artifacts/manifests/x86_64/: manifest.json
ruview/v2/crates/cog-person-count/src/: fusion.rs  inference.rs  lib.rs  main.rs  manifest.rs  publisher.rs  runtime.rs
ruview/v2/crates/cog-person-count/tests/: smoke.rs
ruview/v2/crates/cog-pose-estimation/: Cargo.toml
ruview/v2/crates/cog-pose-estimation/benches/: infer_bench.rs
ruview/v2/crates/cog-pose-estimation/cog/: Makefile  README.md  config.schema.json  manifest.template.json
ruview/v2/crates/cog-pose-estimation/cog/artifacts/: pose_v1.onnx  pose_v1.safetensors  train_results.json
ruview/v2/crates/cog-pose-estimation/cog/artifacts/manifests/arm/: manifest.json
ruview/v2/crates/cog-pose-estimation/cog/artifacts/manifests/x86_64/: manifest.json
ruview/v2/crates/cog-pose-estimation/src/: config.rs  inference.rs  lib.rs  main.rs  manifest.rs  publisher.rs  runtime.rs
ruview/v2/crates/cog-pose-estimation/tests/: smoke.rs
ruview/v2/crates/cog-pose-estimation/tests/fixtures/: sample_room.adapter.safetensors
ruview/v2/crates/homecore/: Cargo.toml  README.md
ruview/v2/crates/homecore-api/: Cargo.toml  README.md
ruview/v2/crates/homecore-api/src/: auth.rs  error.rs  rest.rs  state.rs  tokens.rs  ws.rs
ruview/v2/crates/homecore-api/tests/: server_bin_auth.rs  ws_handshake.rs
ruview/v2/crates/homecore-assist/: Cargo.toml  README.md
ruview/v2/crates/homecore-assist/src/: embedding.rs  handler.rs  intent.rs  lib.rs  pipeline.rs  recognizer.rs  runner.rs  semantic_recognizer.rs
ruview/v2/crates/homecore-automation/: Cargo.toml  README.md
ruview/v2/crates/homecore-automation/src/: action.rs  automation.rs  condition.rs  engine.rs  error.rs  lib.rs  runmode.rs  template.rs  trigger.rs
ruview/v2/crates/homecore-automation/tests/: engine_behaviors.rs
ruview/v2/crates/homecore-hap/: Cargo.toml  README.md
ruview/v2/crates/homecore-hap/src/: accessory.rs  bridge.rs  error.rs  lib.rs  mapping.rs  mdns.rs  ruview.rs
ruview/v2/crates/homecore-plugin-example/: Cargo.toml  README.md
ruview/v2/crates/homecore-plugin-example/src/: abi.rs  lib.rs
ruview/v2/crates/homecore-plugins/: Cargo.toml  README.md
ruview/v2/crates/homecore-plugins/src/: error.rs  host_abi.rs  lib.rs  manifest.rs  permissions.rs  plugin.rs  registry.rs  runtime.rs  tests.rs  verify.rs  wasmtime_runtime.rs
ruview/v2/crates/homecore-plugins/tests/: integration.rs
ruview/v2/crates/homecore-recorder/: Cargo.toml  README.md
ruview/v2/crates/homecore-recorder/src/: db.rs  dedup.rs  lib.rs  listener.rs  schema.rs  semantic.rs
ruview/v2/crates/homecore/benches/: state_machine.rs
ruview/v2/crates/homecore/src/: event.rs  homecore.rs  lib.rs  registry.rs
ruview/v2/crates/nvsim-server/: Cargo.toml  Dockerfile
ruview/v2/crates/nvsim-server/src/: main.rs
ruview/v2/crates/wifi-densepose-calibration/: Cargo.toml
ruview/v2/crates/wifi-densepose-calibration/src/: anchor.rs  bank.rs  enrollment.rs  error.rs  extract.rs  geometry.rs  geometry_embedding.rs  lib.rs  multistatic.rs  runtime.rs  specialist.rs
ruview/v2/crates/wifi-densepose-calibration/tests/: full_loop.rs
ruview/v2/crates/wifi-densepose-occworld-candle/: Cargo.toml
ruview/v2/crates/wifi-densepose-occworld-candle/src/: cnn.rs  config.rs  error.rs  inference.rs  lib.rs  model.rs  transformer.rs  vqvae.rs
ruview/v2/crates/wifi-densepose-occworld-candle/tests/: checkpoint_loading.rs  input_validation.rs  predict_honesty.rs
ruview/v2/crates/wifi-densepose-wasm-edge/: Cargo.toml
ruview/v2/crates/wifi-densepose-wasm-edge/benches/: process_frame_bench.rs
ruview/v2/crates/wifi-densepose-wasm-edge/examples/: run_all_skills.rs
ruview/v2/crates/wifi-densepose-wasm-edge/src/: lib.rs  pipeline_all.rs  skill_registry.rs
ruview/v2/crates/wifi-densepose-wasm-edge/tests/: honest_labeling.rs  pipeline_all.rs  synthetic_validation.rs  vendor_modules_test.rs
sentira/: .env.docker  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  run-mw.ps1  (+1 more)
sentira-landing/: package-lock.json  package.json
(+990 files in other folders)
